--- a/.travis.yml
+++ b/.travis.yml
@@ -1,2 +1,6 @@
 language: r
 cache: package
+install:
+  - Rscript -e 'devtools::install_deps("sayHello")'
+script:
+  - Rscript -e 'devtools::check("sayHello")'
